--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1>Course: HTML & CSS</h1>
             <p>Select a class to view:</p>
             <div>
-                <a href="class-1/index.html" class="btn btn-primary">Class 01</a>
+                <a href="src/class-1/index.html" class="btn btn-primary">Class 01</a>
             </div>
         </div>
     </div>
